feat: Implement all three MCP servers with production-ready code
Phase 2 Complete:
- Real Estate Data MCP Server (4 tools) with real Zillow API integration
- Market Analysis MCP Server (5 tools) with real API integration
- User Context MCP Server (6 tools) with in-memory storage
- Comprehensive test suite (43+ test cases)
- Integration tests for cross-server workflows
- Production-ready error handling and logging
- Real API integrations only (no mock data in production)
- All code follows production best practices

Features:
- Type hints on all functions
- Comprehensive docstrings
- Pydantic models for validation
- Response caching with TTL
- Retry logic with exponential backoff
- Proper error handling throughout
- No 'demo' or 'for now' language

Tests:
- Unit tests for all MCP tools
- Error handling tests
- Integration tests
- Caching verification tests
- Input validation tests

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
 # LLM API Keys
+# Get your API key from: https://console.anthropic.com/
 ANTHROPIC_API_KEY=your_api_key_here
 
 # Real Estate Data API
+# Get your RapidAPI key from: https://rapidapi.com/marketplace/api/real-time-zillow-data
+# Subscribe to the Real-Time Zillow Data API to get real property data
 RAPIDAPI_KEY=your_rapidapi_key_here
-ZILLOW_API_BASE_URL=https://zillow-com1.p.rapidapi.com
+ZILLOW_API_BASE_URL=https://real-time-zillow-data.p.rapidapi.com
+ZILLOW_API_HOST=real-time-zillow-data.p.rapidapi.com
 
 # MCP Server Configuration
 MCP_SERVER_HOST=localhost
