--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-anthropic>=0.1.0
 langgraph>=0.0.40
 anthropic>=0.18.0
 fastmcp>=0.1.0
@@ -7,4 +9,5 @@ python-dotenv>=1.0.0
 pydantic>=2.6.0
 httpx>=0.26.0
 pydantic-settings>=2.1.0
+uvicorn>=0.24.0
 
