--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,5 +43,5 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
+addopts = "-v"
 
