fix: Update to Claude Haiku model and make configurable
- Changed default model from claude-3-5-sonnet-20241022 to claude-3-haiku-20240307
- Made model configurable via ANTHROPIC_MODEL environment variable
- Updated all test files to use new default model
- Updated verification scripts to use Claude Haiku
- Fixed circular import issue in base_agent.py
- Updated .env.example with ANTHROPIC_MODEL

The old model name was causing 404 errors. Claude Haiku is faster and more cost-effective for this use case.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # LLM API Keys
 # Get your API key from: https://console.anthropic.com/
 ANTHROPIC_API_KEY=your_api_key_here
+ANTHROPIC_MODEL=claude-3-haiku-20240307
 
 # Real Estate Data API
 # Get your RapidAPI key from: https://rapidapi.com/marketplace/api/real-time-zillow-data
