fix: Resolve 'FunctionTool object is not callable' error
Problem:
- FastMCP's @mcp.tool() decorator wraps functions in FunctionTool objects
- Agents were trying to call these directly, causing 'FunctionTool object is not callable' error

Solution:
- Refactored all MCP server tools to have internal implementations (_*_impl)
- Created @mcp.tool() wrappers that call internal implementations
- Added direct callable versions (*_direct) for agents to use
- Updated SearchAgent and AnalysisAgent to use direct versions

Changes:
1. Real Estate Server:
   - _search_properties_impl() - internal implementation
   - search_properties() - MCP tool wrapper
   - search_properties_direct() - direct callable for agents

2. Market Analysis Server:
   - _get_neighborhood_stats_impl() - internal implementation
   - _get_school_ratings_impl() - internal implementation
   - _get_market_trends_impl() - internal implementation
   - _calculate_affordability_impl() - internal implementation
   - _get_comparable_sales_impl() - internal implementation
   - Added *_direct() versions for all tools

3. Updated Agents:
   - SearchAgent now uses search_properties_direct()
   - AnalysisAgent now uses all *_direct() versions

This fixes the error: 'FunctionTool' object is not callable
Live app: https://zillow-agent-demo.streamlit.app/

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ htmlcov/
 .env
 .env.local
 
+# Streamlit secrets (never commit real secrets!)
+STREAMLIT_SECRETS_*.toml
+.streamlit/secrets.toml
+
 # IDE
 .vscode/
 .idea/
